# daryl

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BATTLE_NET_CAPTURE_CHECKLIST.md  CAPABILITY_REGISTER.md  CONTRIBUTING.md  EPISTEMIC_LEVELS.md  EVIDENCE_BOOK.md  FABRIC_FRAMINGS_INCUBATING.md  FRAMING_DECISION_LOG.md  HEARTBEAT.md  MVP_DEMO_SCENARIO.md  OPEN_QUESTIONS.md  P9_ENTRY_SIGNING_AND_ARTIFACTS_PROMPT.md  PRODUCT_OBSERVATIONS.md  PROOF_LOG.md  README.md  SECOND_EPOCH_CLOSING_NOTE.md  SECOND_EPOCH_OPEN_QUESTIONS.md  V1_B_01_REPORT.md  V1_F2_REPORT.md  VISION_KNOWLEDGE_FABRIC.md  demo_consumption_layer.py  demo_verify.py  dsm_v2  pyproject.toml
.claude/: launch.json
agent-mesh/: .env.example  .env.railway.example  .gitignore  e2e_mission.py  pyproject.toml  railway.json  requirements.txt  start.py
agent-mesh/dashboard/: __init__.py  app.py  readers.py
agent-mesh/dashboard/templates/: index.html
agent-mesh/dashboard/tests/: conftest.py  test_dashboard_api.py
agent-mesh/docs/: ADR-001-no-auto-decision.md  AGENT_MESH_PRINCIPLES.md  DEBATE_PAPER.md  README.md
agent-mesh/scripts/: debate_malicious.py
agent-mesh/src/agent_mesh/: __init__.py  config.py
agent-mesh/src/agent_mesh/adapters/daryl_adapter/: __init__.py  attestation.py  causal.py  exchange.py  signing.py
agent-mesh/src/agent_mesh/bridge/: __init__.py  context_builder.py  dsm_reader.py  mesh_reader.py  models.py
agent-mesh/src/agent_mesh/dsm/: __init__.py  event.py  factory.py  ulid.py  writer.py
agent-mesh/src/agent_mesh/index/: __init__.py  db.py
agent-mesh/src/agent_mesh/models/: __init__.py  agent.py  contribution.py  task.py
agent-mesh/src/agent_mesh/registry/: __init__.py  agent_registry.py
agent-mesh/src/agent_mesh/scheduler/: __init__.py  task_scheduler.py
agent-mesh/src/agent_mesh/server/: app.py  auth.py  routes.py  schemas.py  state.py
agent-mesh/tests/: conftest.py  test_backends.py  test_bridge_context.py  test_e2e_mission.py  test_events.py  test_generic_worker.py  test_index.py  test_p0_hardening.py  test_registry.py  test_routes_register.py  test_routes_tasks.py  test_scheduler.py  test_signing.py  test_worker_protocol_submit.py
agent-mesh/workers/: protocol.py  run_worker.py
agent-mesh/workers/backends/: __init__.py  anthropic_backend.py  base.py  ollama_backend.py  openai_backend.py  openai_compatible_backend.py  zhipu_backend.py
agent-mesh/workers/claude_worker/: worker.py
agent-mesh/workers/generic_worker/: __init__.py  worker.py
benchmarks/: bench_phase_7a_action_index.py  bench_pillars.py  bench_storage_read_scaling.py
demo/: README.md  demo_agent_memory_justified_answer.py  demo_agent_memory_omari_lead_capture.py  demo_end_to_end.py  demo_support_agent.py
docs/: ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_EXACTE_PROJET.md  AUDIT_REPORT.md  CLAWDBOT_DSM_INTEGRATION.md  CLAWD_LAB_CONCEPTUAL_AUDIT.md  CONSUMPTION_LAYER.md  DEMO_GUIDE.md  DIRECTION_LEDGER.md  DSM_FULL_SYSTEM_AUDIT.md  DSM_FUTURE_ARCHITECTURE.md  DSM_MEMORY_LEDGER.md  KNOWN_ISSUES.md  LAB_TO_DARYL_MIGRATION_PLAN.md  QUICK_START_HOT_SWAP.md  REMAINING_ISSUES_AND_PATCHES.md  RR_INTEGRATION_SPEC.md  architecture_diagram.md  skill_as_data_eval_v0_2.md
experiments/: RELATIONAL_TRUST_MODEL.md  RTM_v0.md  d1_timestamp_roundtrip.py  d2_hash_canonical_perimeter.py  f1b_full_minimality.py  f2_counterexample.py  ia2_citation_replay.py  iter1_index_build_scaling.py  iter3_prototype_fix.py  iter5_correctness.py  rg3_signed_relation.py  rg3b_r4_correction.py  tb2_id_query_intersection.py  tb3_id_exchange_receipt.py
outreach/: outreach_messages.txt  post_linkedin.txt  post_x.txt
research/: CAPABILITY_EXPOSURE.md  CONTINUITY_DOCTRINE.md  DARYL_PLATFORM_ROADMAP.md  EPOCHS.md  MATURITY.md  MILESTONE_DASHBOARD.md  OPERATIONAL_ENVELOPE_FORMAT.md  PLATFORM_MILESTONE_M1.md  PROGRAM_LIFECYCLE.md  PROOF_PORTFOLIO.md  ROADMAP_PIVOT.md
scripts/: forbid_storage_access.py  moltbook_observation_runner.py  run_stability_suite.py  session_test_runner.py  setup_dev_env.sh  trace_replay.py  validate_dev_install.py
tests/: test_agent.py  test_agent_coverage.py  test_agent_memory.py  test_agent_memory_cli.py  test_agent_memory_demo.py  test_agent_memory_omari_demo.py  test_agent_memory_report.py  test_agent_pillars_integration.py  test_agent_proposal_functional_v0.py  test_agent_proposal_gateway_v0.py  test_agent_proposal_live_smoke_v0.py  test_agent_startup.py  test_anchor.py  test_artifacts.py  test_artifacts_coverage.py  test_attestation.py  test_audit.py  test_block_layer.py  test_block_layer_coverage.py  test_causal.py  test_cli_basic.py  test_cold_storage.py  test_collective.py  test_coverage.py  (+39 more)
(+602 files in other folders)
