[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daryl-dsm"
version = "0.6.0"
description = "Deterministic Sharding Memory for AI agents — append-only, hash-chained, tamper-evident event log"
requires-python = ">=3.8"
dependencies = ["PyNaCl>=1.5.0", "cryptography>=41.0"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
dsm = "dsm.cli:main_dsm"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
