[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daryl-dsm"
version = "0.6.0"
description = "Deterministic Sharding Memory for AI agents — append-only, hash-chained, tamper-evident event log"
requires-python = ">=3.8"
dependencies = ["PyNaCl>=1.5.0", "cryptography>=41.0"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "bandit"]

[project.scripts]
dsm = "dsm.cli:main_dsm"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.ruff]
lint.ignore = [
    "F401",   # unused imports
    "F541",   # f-string without placeholders
    "F811",   # redefinition
    "F821",   # undefined name
    "F841",   # unused variable
    "E402",   # module import not at top
]
