[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daryl-dsm"
version = "1.0.1"
description = "Deterministic Sharding Memory for AI agents — append-only, hash-chained, tamper-evident event log"
requires-python = ">=3.8"
dependencies = [
    "PyNaCl>=1.5.0",
    "cryptography>=41.0",
    "filelock>=3.12",
]


[project.urls]
Homepage = "https://github.com/daryl-labs-ai/daryl"
Source = "https://github.com/daryl-labs-ai/daryl"
"Bug Tracker" = "https://github.com/daryl-labs-ai/daryl/issues"

[project.optional-dependencies]
goose = ["mcp>=1.25.0"]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "bandit",
    "mcp>=1.25.0",
]

[project.scripts]
dsm = "dsm.cli:main_dsm"
dsm-serve-goose = "dsm.integrations.goose.__main__:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.ruff]
lint.ignore = [
    "F401",   # unused imports
    "F541",   # f-string without placeholders
    "F811",   # redefinition
    "F821",   # undefined name
    "F841",   # unused variable
    "E402",   # module import not at top
]

[tool.coverage.run]
source = ["src/dsm"]
omit = [
    "src/dsm/cli.py",
    "src/dsm/__main__.py",
    "src/dsm/core/runtime.py",
    "src/dsm/core/session.py",
    "src/dsm/core/signing.py",
    "src/dsm/core/tracing.py",
    "src/dsm/core/drift_metrics.py",
    "src/dsm/security.py",
    "src/dsm/skills/cli.py",
    "src/dsm/skills/skill_graph.py",
    "src/dsm/skills/skill_success_logger.py",
    "src/dsm/skills/skill_usage_logger.py",
    "src/dsm/skills/success_analyzer.py",
    "src/dsm/skills/ingestor.py",
    "src/dsm/skills/anthropic_parser.py",
    "src/dsm/ans/ans_test.py",
    "src/dsm/ans/cli.py",
    "src/dsm/block_layer/benchmark.py",
    "src/dsm/moltbook_home_client.py",
    "src/dsm/moltbook_home_normalizer.py",
    "src/dsm/moltbook/__init__.py",
    "src/dsm/storage/__init__.py",
    "src/dsm/rr/context/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "raise NotImplementedError",
]
show_missing = true
fail_under = 75
